# ProtoAI.exe

./: .gitignore  Anthropic4Cli.bat  Blended v2.1 Memory Addition.txt  Cargo.toml  How to Add Qwen 2.5 Coder 7B (Q4_K_M) as a Local.txt  Memory Distillation Rules.txt  Open Router Models.txt  OpenRoute4Cli.bat  PRIVACY.md  Profile Types.txt  ProtoAI_analysis_results.md  Protoai_4.3.26.txt  README.md  SDOA Implementation Protocol.txt  SDOA-Guide.md  This integrated specification blend.txt  User approved Claude's plan.txt  abstract-riding-hejlsberg.md  auto-escalation-flow.txt  breakdowns.txt  dynamic-prancing-dusk.md  governing architectural invariant f.txt  implementation_plan.md  most recent session  ⭐ ProtoAI – Cu.txt  package-lock.json  package.json  protoai-architecture-snapshot.md  qmd-bun-integration.md  styles.css  tauri.conf.json  todo.txt  wild-zooming-leaf.md  ⏳ Remaining Implementation.txt
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/nsis/: installer.nsi
tauri-app/src-tauri/resources/server/: index.cjs  package.json  server-ipc.cjs  tauri-entry.cjs
tauri-app/src-tauri/resources/server/cli/: file-permissions.cmd  permissions.js
tauri-app/src-tauri/resources/server/lib/: MemoryManager.js  SettingsManager.js
tauri-app/src-tauri/resources/server/local_model/: bootstrap.py  qwen_server.py  requirements.txt
tauri-app/src-tauri/resources/server/orchestration/: ListProfilesWorkflow.js  ListProjectsWorkflow.js  LoadProjectHistoryWorkflow.js  SearchHistoryWorkflow.js  SendMessageWorkflow.js  SpellcheckWorkflow.js  VersionInfoWorkflow.js  VoiceChatWorkflow.js  WorkflowBase.js  (+4 more)
tauri-app/src-tauri/src/: commands.rs  engine_bridge.rs  main.rs  node_process_backend.rs
(+220 files in other folders)
