[package]
name = "protoai"
version = "0.1.0"
description = "An AI interface App"
authors = ["Tre'"]
edition = "2021"

[lib]
path = "src/ignore_this.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
