[package]
name = "protoai"
version = "0.1.0"
description = "An AI interface App"
authors = ["Tre'"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
# Updated to stable v2.0.0. Removed 'shell-open' as it is now a plugin.
tauri = { version = "2.0.0", features = ["protocol-asset"] }

# The 'shell' functionality is now handled by this plugin
tauri-plugin-shell = "2.0.0"
tauri-plugin-opener = "2.0.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
